@startuml

'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class Employee {
    - name
    - email
    - position
    - phone
}

class Skill {
    - skillName

    + addSkill(skill: Skill)
}

class SkillRepository{
    - List<Skill> skills

    + void addSkill(skillName: String)
    + void removeSkill(skillName: String)
    + void updateSkill(skillNameOld: String, skillNameNew: String)
    + Skill getSkill(skillName: String)
}

class AssignSkillUI {
}

class Repositories{
    - SkillRepository skillRepository
    - EmployeeRepository employeeRepository

    + SkillRepository getSkillRepository()
    + EmployeeRepository getEmployeeRepository()
}

class AssignSkillController {
    + AssignSkillController(employeeRepository, skillRepository)
    + assignSkill(employeeId: String, skill: Skill)
}

class EmployeeRepository {
    - List<Employee> employees

    + void addEmployee(employee: Employee)
    + void removeEmployee(employee: Employee)
    + boolean addSkillToEmployee(employeeId: String, skill: Skill)
    + Employee getEmployee(employeeId: String)
    + void assignSkill(employeeId: String, skill: Skill)
}

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

AssignSkillUI .> AssignSkillController

AssignSkillController .> Repositories : repositories

Repositories -> "1" SkillRepository
Repositories -> "1" EmployeeRepository

AssignSkillController ..> Skill : skill
AssignSkillController ..> SkillRepository : SkillRepository

ApplicationSession --> "1" UserSession : userSession

AssignSkillController ..> "1" Employee : employee
AssignSkillController ..> ApplicationSession
AssignSkillController ..> UserSession

Employee --> "*" Skill : has
EmployeeRepository --> "*" Employee : employees
EmployeeRepository --> "1" Employee : getEmployee(employeeId: String)
EmployeeRepository --> "*" Skill : addSkillToEmployee(employeeId: String, skill: Skill)
EmployeeRepository --> "*" Skill : assignSkill(employeeId: String, skill: Skill)

@enduml
